<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ArduinoControllerActivity" >

    <LinearLayout
        android:id="@+id/linear_info"
        android:layout_width="fill_parent" 
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="#efefef">
	    <TextView
	        android:id="@+id/text_info"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:gravity="center|center_vertical"
	        android:textSize="32sp"
	        android:text="@string/blank_msg"
	         />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/scroll_serial_info"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="2"
        android:background="#e0e0e0">
	    <TextView
	        android:id="@+id/text_serial"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="12sp"
	         />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linear_button"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button 
            android:id="@+id/button_send1"
            android:layout_width="0dip"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:textSize="14sp"
            android:text="@string/button1" />
        <Button 
            android:id="@+id/button_send2"
            android:layout_width="0dip"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:textSize="14sp"
            android:text="@string/button2" />
        <Button 
            android:id="@+id/button_send3"
            android:layout_width="0dip"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:textSize="14sp"
            android:text="@string/button3" />
        <Button 
            android:id="@+id/button_send4"
            android:layout_width="0dip"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:textSize="14sp"
            android:text="@string/button4" />
    </LinearLayout>
    
</LinearLayout>